--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -185,7 +185,7 @@ a, a:hover {
 
                 .postcontent .portrait img {
                     float: left;
-                    padding: 15px;
+                    margin: 15px;
                     border-radius: 15px;
                 }
             
