--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -49,17 +49,19 @@ li {
 
 a, a:hover {
     text-decoration: none;
-        -moz-transition-duration: 0.3s;
-        -o-transition-duration: 0.3s;
-        -webkit-transition-duration: 0.3s;
-        transition-duration: 0.3s;
+        -moz-transition-duration: 0.25s;
+        -o-transition-duration: 0.25s;
+        -webkit-transition-duration: 0.25s;
+        transition-duration: 0.25s;
     }
 
     img, img:hover {
-        -moz-transition-duration: 0.3s;
-        -o-transition-duration: 0.3s;
-        -webkit-transition-duration: 0.3s;
-        transition-duration: 0.3s;
+        -moz-transition-duration: 0.25s;
+        -o-transition-duration: 0.25s;
+        -webkit-transition-duration: 0.25s;
+        transition-duration: 0.25s;
+        max-width: 100%;
+        max-height: 100%;
     }
     
     a:link, a:visited {
@@ -87,7 +89,7 @@ a, a:hover {
     }
 
 
-.sidebar {
+.menu {
     text-align: center;
     width: 220px;
 	position: fixed;
@@ -99,9 +101,6 @@ a, a:hover {
 	box-shadow: 5px 0px 5px rgba(0, 22, 103, .5);
 }
 
-#sidebar {
-    padding: 20px;
-}
 
     
 	
@@ -113,49 +112,44 @@ a, a:hover {
     min-width: 200px;
     margin: auto;
 }
+.description span {
+    display: block;
+}
 
-.sidebarlinks {
+.menulinks {
       font-family: 'Shadows Into Light Two', Arial, Helvetica, sans-serif;
       font-size: 14pt;
       text-align: right;
       width: 80%;
-      float: left;
       margin-top: 20px;
       margin-left: -5px;
 }
-
-        .sidebarlinks a:link,
-        .sidebarlinks a:visited {
+    .menulinks li {
+        width: 100%;
+        height: 45px;
+        position: relative;
+    }
+        .menulinks a {
+            width: 100%;
+            color: #25361c;
             text-decoration: none;
             height: 38px;
-            color: #25361c;
             background: #f5f5f5 url('../images/layout/PostBackground-green.jpg');
+            box-shadow: 3px 5px 3px rgba(107, 61, 36, .5);
+            position: absolute;
+            top: 0;
             display: block;
             padding: 8px 15px;
-            box-shadow: 3px 5px 3px rgba(107, 61, 36, .5);
-        }
-                
-        .sidebarlinks a:hover {
-            position: relative;
+        }       
+        .menulinks li:hover a {
             top: 3px;
             box-shadow: 3px 3px 1px rgba(107, 61, 36, .5);
         }
-        
-        .sidebarlinks li {
-            margin: 10px auto;
-        }
-
-        .sidebarlinks .lapse a {
-            padding: 0 10px;
-            height: 40px;
-            background-color: #0b0e17;
-            background-image: none;
-            overflow: hidden;
+        .menulinks a:link,
+        .menulinks a:visited {
+            
         }
         
-            .sidebarlinks .lapse a img {
-                height: 100%;
-            }
 
 
 
@@ -183,10 +177,15 @@ a, a:hover {
                     padding-bottom: 10px;
                 }
 
-                .postcontent .portrait img {
+                .portrait {
                     float: left;
                     margin: 15px;
+                }
+                .portrait img {
                     border-radius: 15px;
+                }
+                .portrait::after {
+                    clear: both;
                 }
             
                        
@@ -265,14 +264,20 @@ a, a:hover {
 
 
 
+.portfolio_index{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 
 .portfolio_item {
+    padding-top: 5px;
     width: 280px;
-    height: 250px;
+    height: auto;
     margin: 10px;
     font-size: 1rem;
     line-height: 1.2em;
-    float: left;
+    justify-self: center;
+    position: relative;
 }
 .portfolio_item p {
     position: relative;
@@ -289,19 +294,26 @@ a, a:hover {
     margin-bottom: 8px;
     border-radius: 4px;
     position: relative;
-    box-shadow: 0px 3px 6px 1px rgba(10, 31, 108, 0.6)
+    box-shadow: 0px 3px 6px 1px rgba(10, 31, 108, 0.6);
 }
 
     .portfolio_item img {
         max-width: 100%;
         min-width: 280px;
+        height: 170px;
+        border-radius: 4px;
+        position: absolute;
+        bottom: 0;
+        overflow:hidden;
         clear: both;
     }
-    .folio-img-wrapper:hover {
-        -webkit-box-shadow: 0px 0px 30px 12px rgba(255, 255, 255, 1);
-        -moz-box-shadow: 0px 0px 30px 12px rgba(255, 255, 255, 1);
-        box-shadow: 0px 0px 30px 12px rgba(255, 255, 255, 1);
+    .folio-img-wrapper:hover img {
+        height: 175px;
+        -webkit-box-shadow: 0px -10px 30px 5px rgba(255, 255, 255, 1);
+        -moz-box-shadow: 0px -10px 30px 5px rgba(255, 255, 255, 1);
+        box-shadow: 0px -10px 30px 5px rgba(255, 255, 255, 1);
         bottom: 5px;
+        padding-bottom: 10px;
     }
     .portfolio_item .title {
         text-align: center;
@@ -324,6 +336,102 @@ a, a:hover {
          z-index: 6;
     }
 
+    a.see-code,
+    .see-code a {
+        color: #FFFFFF;
+        font-family: "Helvetica Neue","Segoe UI","Oxygen","Ubuntu","Cantarell","Open Sans",sans-serif;
+        /* text-align: center; */
+        padding: 3px;
+        margin: 4px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        background-color: #2e2631;
+        border-radius: 3px;
+        display: block;
+        position: relative;
+        z-index: 5;
+    }
+
+    a.see-code:hover,
+    .see-code a:hover {
+        color: #a3ffb0;
+    }
+
+    .see-code i {
+        font-weight: normal;
+        font-size: 1.25em;
+        padding: 1px 4px;
+    }
+
+
 .clear {
         clear: both;
      }
+
+
+
+     @media only screen and (max-width: 980px) {
+         body {
+            background-position: 0px 80px;
+         }
+         .header {
+             margin: 0;
+         }
+        .menu {
+            width: 100%;
+            position: static;
+            float: none;
+            height: auto;
+            box-shadow: 0px 5px 5px rgba(0, 22, 103, .5);
+            top: 0;
+        }
+        .description span {
+            display: inline;
+        }
+        .menulinks {
+            text-align: center;
+            width: auto;
+            margin-top: 0px;
+            margin-left: 0;
+            display: flex;
+            background: #f5f5f5 url('../images/layout/PostBackground-green.jpg');
+      }
+      .menulinks li {
+          display: inline;
+      }
+      .menulinks a {
+          width: auto;
+        background: none;
+        margin: 0;
+        display: inline-block;
+        position: static;
+        -moz-box-shadow: none;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+      }
+      .menulinks li:hover a{
+        color: #3c89ff;
+        -moz-box-shadow: none;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+      }
+      .post_column  {
+        width: 90%; 
+        padding-top: 20px;
+        padding-left: 0;
+    }
+    }
+
+    @media only screen and (max-width: 730px) {
+        .portfolio_index {
+            grid-template-columns: 1fr;
+            justify-content: center;
+        }
+        .portrait {
+            width: 100%;
+            text-align: center;
+        }
+        .postcontent .portrait img {
+            float: none;
+        }
+    }
